[project]
name = "esipandas"
version = "0.0.1"
authors = [
  { name="Ryan R. Olds", email="ryanrolds@gmail.com" },
]
description = "A package for loading ESI data into Pandas DataFrames"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"